--- a/home/.i3/config
+++ b/home/.i3/config
@@ -110,6 +110,9 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
+bindsym $mod+Control+Left workspace prev
+bindsym $mod+Control+Right workspace next
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -142,6 +145,8 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+
+for_window [class="^Nautilus$" instance="^file_progress$"] floating enable
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
