--- a/home/.i3/config
+++ b/home/.i3/config
@@ -151,6 +151,7 @@ for_window [class="^Nautilus$" instance="^file_progress$"] floating enable
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status --config ~/.i3/i3status
+#	status_command i3status --config ~/.i3/i3status
+        status_command ~/.i3/my_i3status
 	position top
 }
