--- a/home/.config/Trolltech.conf
+++ b/home/.config/Trolltech.conf
@@ -20,7 +20,7 @@ com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\qt4\plugins\imagefor
 com.trolltech.Qt.QIconEngineFactoryInterface%3A\usr\lib\qt4\plugins\iconengines\libqsvgicon.so=2012-07-10T20:19:51
 
 [Qt]
-filedialog=@ByteArray(\0\0\0\xbe\0\0\0\x3\0\0\0\x1e\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0v\0\0\xe\0\x1\0\0\0\x6\x1\0\0\0\x1\0\0\0\x3\0\0\0\x5\x66ile:\0\0\0\x11\x66ile:///home/test\0\0\0\x18\x66ile:///media/truecrypt1\0\0\0\x5\0\0\0\x14\0/\0h\0o\0m\0\x65\0/\0t\0\x65\0s\0t\0\0\0\f\0/\0m\0\x65\0\x64\0i\0\x61\0\0\0\"\0/\0m\0\x65\0\x64\0i\0\x61\0/\0t\0r\0u\0\x65\0\x63\0r\0y\0p\0t\0\x31\0\0\0\x34\0/\0m\0\x65\0\x64\0i\0\x61\0/\0t\0r\0u\0\x65\0\x63\0r\0y\0p\0t\0\x31\0/\0n\0\x65\0\x62\0u\0l\0\x61\0\x65\0s\0\0\0<\0/\0m\0\x65\0\x64\0i\0\x61\0/\0t\0r\0u\0\x65\0\x63\0r\0y\0p\0t\0\x31\0/\0k\0\x65\0\x65\0p\0\x61\0s\0s\0x\0/\0\x62\0i\0n\0\0\0\x34\0/\0m\0\x65\0\x64\0i\0\x61\0/\0t\0r\0u\0\x65\0\x63\0r\0y\0p\0t\0\x31\0/\0n\0\x65\0\x62\0u\0l\0\x61\0\x65\0s\0\0\0~\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x1b\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\x1e\0\0\0\x1\0\0\0\0\0\0\0\x43\0\0\0\x1\0\0\0\0\0\0\0\x46\0\0\0\x1\0\0\0\0\0\0\0t\0\0\0\x1\0\0\0\0\0\0\0\0)
+filedialog=@ByteArray(\0\0\0\xbe\0\0\0\x3\0\0\0\x1e\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0v\0\0\xe\0\x1\0\0\0\x6\x1\0\0\0\x1\0\0\0\x3\0\0\0\x5\x66ile:\0\0\0\x11\x66ile:///home/test\0\0\0\x18\x66ile:///media/truecrypt1\0\0\0\x5\0\0\0\x14\0/\0h\0o\0m\0\x65\0/\0t\0\x65\0s\0t\0\0\0\f\0/\0m\0\x65\0\x64\0i\0\x61\0\0\0\"\0/\0m\0\x65\0\x64\0i\0\x61\0/\0t\0r\0u\0\x65\0\x63\0r\0y\0p\0t\0\x31\0\0\0\x34\0/\0m\0\x65\0\x64\0i\0\x61\0/\0t\0r\0u\0\x65\0\x63\0r\0y\0p\0t\0\x31\0/\0n\0\x65\0\x62\0u\0l\0\x61\0\x65\0s\0\0\0<\0/\0m\0\x65\0\x64\0i\0\x61\0/\0t\0r\0u\0\x65\0\x63\0r\0y\0p\0t\0\x31\0/\0k\0\x65\0\x65\0p\0\x61\0s\0s\0x\0/\0\x62\0i\0n\0\0\0\x14\0/\0h\0o\0m\0\x65\0/\0t\0\x65\0s\0t\0\0\0~\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x1b\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\x1e\0\0\0\x1\0\0\0\0\0\0\0\x43\0\0\0\x1\0\0\0\0\0\0\0\x46\0\0\0\x1\0\0\0\0\0\0\0t\0\0\0\x1\0\0\0\0\0\0\0\0)
 font="DejaVu Sans,9,-1,5,50,0,0,0,0,0"
 Palette\active=#000000, #d4d0c8, #ffffff, #e9e7e3, #6a6864, #a0a0a4, #000000, #ffffff, #000000, #ffffff, #d4d0c8, #000000, #000080, #ffffff, #0000ff, #ff00ff, #e9e7e3, #000000, #ffffdc, #000000
 Palette\inactive=#000000, #d4d0c8, #ffffff, #e9e7e3, #6a6864, #a0a0a4, #000000, #ffffff, #000000, #ffffff, #d4d0c8, #000000, #000080, #ffffff, #0000ff, #ff00ff, #e9e7e3, #000000, #ffffdc, #000000
@@ -42,33 +42,33 @@ videomode=Auto
 GUIEffects=none
 
 [Qt%20Plugin%20Cache%204.8.false]
-usr\lib\i386-linux-gnu\qt4\plugins\inputmethods\libqimsw-multi.so=40801, 0, i386 linux g++-4 full-config, 2012-10-24T02:18:21
-usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqgif.so=40801, 0, i386 linux g++-4 full-config, 2012-10-24T02:18:21
-usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqico.so=40801, 0, i386 linux g++-4 full-config, 2012-10-24T02:18:21
-usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqjpeg.so=40801, 0, i386 linux g++-4 full-config, 2012-10-24T02:18:21
-usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqmng.so=40801, 0, i386 linux g++-4 full-config, 2012-10-24T02:18:21
-usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqsvg.so=40801, 0, i386 linux g++-4 full-config, 2012-10-24T02:18:22
-usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqtga.so=40801, 0, i386 linux g++-4 full-config, 2012-10-24T02:18:21
-usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqtiff.so=40801, 0, i386 linux g++-4 full-config, 2012-10-24T02:18:21
+usr\lib\i386-linux-gnu\qt4\plugins\inputmethods\libqimsw-multi.so=40801, 0, i386 linux g++-4 full-config, 2013-02-06T21:32:48
+usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqgif.so=40801, 0, i386 linux g++-4 full-config, 2013-02-06T21:32:48
+usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqico.so=40801, 0, i386 linux g++-4 full-config, 2013-02-06T21:32:48
+usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqjpeg.so=40801, 0, i386 linux g++-4 full-config, 2013-02-06T21:32:48
+usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqmng.so=40801, 0, i386 linux g++-4 full-config, 2013-02-06T21:32:48
+usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqsvg.so=40801, 0, i386 linux g++-4 full-config, 2013-02-06T21:32:49
+usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqtga.so=40801, 0, i386 linux g++-4 full-config, 2013-02-06T21:32:48
+usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqtiff.so=40801, 0, i386 linux g++-4 full-config, 2013-02-06T21:32:48
 usr\lib\i386-linux-gnu\qt4\plugins\systemtrayicon\libsni-qt.so=40704, 1, i386 linux g++-4 full-config, 2011-10-27T06:40:12
-usr\lib\i386-linux-gnu\qt4\plugins\iconengines\libqsvgicon.so=40801, 0, i386 linux g++-4 full-config, 2012-10-24T02:18:22
+usr\lib\i386-linux-gnu\qt4\plugins\iconengines\libqsvgicon.so=40801, 0, i386 linux g++-4 full-config, 2013-02-06T21:32:49
 usr\lib\i386-linux-gnu\qt4\plugins\codecs\libqcncodecs.so=40801, 0, i386 linux g++-4 full-config, 2012-07-15T07:15:24
 usr\lib\i386-linux-gnu\qt4\plugins\codecs\libqjpcodecs.so=40801, 0, i386 linux g++-4 full-config, 2012-07-15T07:15:24
 usr\lib\i386-linux-gnu\qt4\plugins\codecs\libqkrcodecs.so=40801, 0, i386 linux g++-4 full-config, 2012-07-15T07:15:24
 usr\lib\i386-linux-gnu\qt4\plugins\codecs\libqtwcodecs.so=40801, 0, i386 linux g++-4 full-config, 2012-07-15T07:15:24
 
 [Qt%20Factory%20Cache%204.8]
-com.trolltech.Qt.QInputContextFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\inputmethods\libqimsw-multi.so=2012-10-24T02:18:21, imsw-multi
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqgif.so=2012-10-24T02:18:21, gif
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqico.so=2012-10-24T02:18:21, ico
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqjpeg.so=2012-10-24T02:18:21, jpeg, jpg
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqmng.so=2012-10-24T02:18:21, mng
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqsvg.so=2012-10-24T02:18:22, svg, svgz
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqtga.so=2012-10-24T02:18:21, tga
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqtiff.so=2012-10-24T02:18:21, tiff, tif
+com.trolltech.Qt.QInputContextFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\inputmethods\libqimsw-multi.so=2013-02-06T21:32:48, imsw-multi
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqgif.so=2013-02-06T21:32:48, gif
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqico.so=2013-02-06T21:32:48, ico
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqjpeg.so=2013-02-06T21:32:48, jpeg, jpg
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqmng.so=2013-02-06T21:32:48, mng
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqsvg.so=2013-02-06T21:32:49, svg, svgz
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqtga.so=2013-02-06T21:32:48, tga
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\imageformats\libqtiff.so=2013-02-06T21:32:48, tiff, tif
 com.nokia.qt.QSystemTrayIconSysFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\systemtrayicon\libsni-qt.so=2011-10-27T06:40:12, default
-com.trolltech.Qt.QIconEngineFactoryInterfaceV2%3A\usr\lib\i386-linux-gnu\qt4\plugins\iconengines\libqsvgicon.so=2012-10-24T02:18:22, svg, svgz, svg.gz
-com.trolltech.Qt.QIconEngineFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\iconengines\libqsvgicon.so=2012-10-24T02:18:22
+com.trolltech.Qt.QIconEngineFactoryInterfaceV2%3A\usr\lib\i386-linux-gnu\qt4\plugins\iconengines\libqsvgicon.so=2013-02-06T21:32:49, svg, svgz, svg.gz
+com.trolltech.Qt.QIconEngineFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\iconengines\libqsvgicon.so=2013-02-06T21:32:49
 com.trolltech.Qt.QTextCodecFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\codecs\libqcncodecs.so=2012-07-15T07:15:24, GB18030, GBK, GB2312, gb2312.1980-0, gbk-0, CP936, MS936, windows-936, MIB: 114, MIB: 113, MIB: 2025, MIB: 57, MIB: -113
 com.trolltech.Qt.QTextCodecFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\codecs\libqjpcodecs.so=2012-07-15T07:15:24, EUC-JP, ISO-2022-JP, Shift_JIS, jisx0201*-0, jisx0208*-0, JIS7, SJIS, MS_Kanji, MIB: 18, MIB: 39, MIB: 17, MIB: 15, MIB: 63
 com.trolltech.Qt.QTextCodecFactoryInterface%3A\usr\lib\i386-linux-gnu\qt4\plugins\codecs\libqkrcodecs.so=2012-07-15T07:15:24, EUC-KR, ksc5601.1987-0, cp949, MIB: 38, MIB: 36, MIB: -949
