--- a/home/.i3/config
+++ b/home/.i3/config
@@ -24,8 +24,7 @@ font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 floating_modifier $mod
 
 # start a terminal
-#bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec urxvtcd
+bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -36,30 +35,6 @@ bindsym $mod+d exec ~/.i3/dmenu_run.sh
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-
-#colourclass               border    bckgrnd    text
-#client.focused             #1793D0   #1793D0    #FFFFFF	#285577
-#client.focused_inactive    #000000   #333333    #FFFFFF	#5f676a
-#client.unfocused           #000000   #333333    #FFFFFF	#222222
-#client.urgent              #FF0000   #FF0000    #FF0000	#900000
-#bar.focused                #1793D0   #000000    #FFFFFF	#0c0c0c
-#bar.unfocused              #333333   #000000    #FFFFFF
-#bar.urgent                 #FF0000   #000000    #FF0000
-
-# class                 border  backgr. text    indicator child_border
-#client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
-#client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-#client.unfocused        #333333 #222222 #888888 #292d2e   #222222
-#client.urgent           #2f343a #900000 #ffffff #900000   #900000
-#client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
-
-client.focused          #1c8948 #185533 #ffffff #2e9ef4   #285577
-client.focused_inactive #333333 #5f775a #ffffff #484e50   #5f676a
-client.unfocused        #333333 #222222 #888888 #292d2e   #222222
-client.urgent           #2f3a34 #900000 #ffffff #900000   #900000
-#client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
-
-client.background       #ffffff
 
 # change focus
 bindsym $mod+j focus left
@@ -174,36 +149,15 @@ bindsym $mod+x mode "resize"
 
 for_window [class="^Nautilus$" instance="^file_progress$"] floating enable
 for_window [class="TrueCrypt"] floating enable
-for_window [class="Truecrypt"] floating enable
 for_window [class="^rdesktop"] floating enable
-for_window [class="KeePass2" title="Edit Entry"] floating enable
-for_window [class="KeePass2" title="Options"] floating enable
-for_window [title="Open Database File"] floating enable
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
 #	status_command i3status --config ~/.i3/i3status
-	status_command py3status -c ~/.i3/i3status
-#        status_command ~/.i3/my_i3status
-#        separator_symbol "|"
+        status_command ~/.i3/my_i3status
 	position top
-	#tray_output primary
-#	font -*-terminus-*-*-*-*-12-*-*-*-*-*-paratype-*
-	#tray_output VBOX0
-#	font pango:DejaVu Sans Mono 10
-	colors {	
-		background #000000
-		statusline #ffffff
-		separator #666666
-
-		focused_workspace  #4c9978 #287755 #ffffff
-		active_workspace   #335533 #5f6a67 #ffffff
-		inactive_workspace #333333 #224422 #888888
-		urgent_workspace   #2f3a34 #904000 #ffffff
-	#	binding_mode       #2f343a #900000 #ffffff
-	}
 }
 
-exec --no-startup-id "/home/user/.i3/autostart.sh"
+exec --no-startup-id "~/.i3/autostart.sh"
 
